Fixed footer alignment issues in privacy container

--- a/src/scss/footer.css
+++ b/src/scss/footer.css
@@ -37,9 +37,12 @@ footer {
   color: white;
 }
 
-@media screen and (min-width: 1024px) {
+@media screen and (min-width: 992px) {
   footer {
     padding: 2rem 5rem !important;
+  }
+  .footer-privacy {
+    margin-left: -7.5rem;
   }
 }
 
